Added physical maturity table; Added better quality images; Finished the calculator code; Added styles to the physical maturity table; Added footer.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <title>New Ballard - GDG Open Sampa</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="author" content="Sam Carecho - https://plus.google.com/106183363140838342264/posts">
+<meta name="sponsor" content="GDG Open Sampa - https://plus.google.com/107992078616098741450/posts">
 
 <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
 <link href="css/bootstrap-responsive.css" rel="stylesheet">
@@ -35,16 +37,21 @@
 	  </div>
 	  <div class="container">
       <h1 id="results">
-	      <span id="ResuWN">34</span>
+	      <span id="ResuWN">0</span>
 	      <span class="resultUnit" id="ResuWU">s</span>
 	      <span id="conjuction">&nbsp;+&nbsp;</span>
-	      <span id="ResuDN">4</span>
-	      <span class="resultUnit" id="ResuDN">d</span>
+	      <span id="ResuDN">0</span>
+	      <span class="resultUnit" id="ResuDU">d</span>
       </h1>
 	  </div>
 	</div>
 </div>
 <div class="container">
+	<div class="row">
+    <div class="span8 sinal grupo">
+      <span class="sinalTitle">MATURIDADE NEUROMUSCULAR</span>
+    </div>
+  </div>
   <div class="row">
     <div class="span8 sinal">
       <span class="sinalTitle">Postura</span>
@@ -340,7 +347,466 @@
     </div>
   </div>
 </div>
-
+<div class="container">
+	<div class="row">
+    <div class="span8 sinal grupo">
+      <span class="sinalTitle">MATURIDADE FÍSICA</span>
+    </div>
+  </div>
+  <div class="row">
+    <div class="span9 sinal">
+      <span class="sinalTitle">Pele</span>
+    </div>
+	  <div class="countRow">
+	  	<div class="span9 inactive">
+	      <div id="pele_-2" score="-2">
+		      <div class="characteristic">
+		      	<span class="char-description"></span>
+		      </div>
+		      <div class="count">-2</div>
+		    </div>
+	    </div>
+	    <div class="span9">
+	      <div id="pele_-1" score="-1">
+		      <div class="characteristic">
+		      	<span class="char-description">Pegajoso, friável, transparente</span>
+		      </div>
+		      <div class="count">-1</div>
+		    </div>
+	    </div>
+	    <div class="span9">
+	      <div id="pele_0" score="0">
+	        <div class="characteristic">
+		      	<span class="char-description">Gelatinoso, vermelho, translúcido</span>
+		      </div>
+	        <div class="count">0</div>
+	      </div>
+	    </div>
+	    <div class="span9">
+	      <div id="pele_1" score="1">
+	        <div class="characteristic">
+		      	<span class="char-description">Veias cor-de-rosa, visíveis lisas</span>
+		      </div>
+	        <div class="count">1</div>
+	      </div>
+	    </div>
+	    <div class="span9">
+	      <div id="pele_2" score="2">
+	        <div class="characteristic">
+		      	<span class="char-description">Rash descascando superficial de &/ou, poucas veias</span>
+		      </div>
+	        <div class="count">2</div>
+	      </div>
+	    </div>
+	    <div class="span9">
+	      <div id="pele_3" score="3">
+	        <div class="characteristic">
+		      	<span class="char-description">Descamação grosseira, áreas de palidez, raras veias</span>
+		      </div>
+	        <div class="count">3</div>
+	      </div>
+	    </div>
+	    <div class="span9">
+	      <div id="pele_4" score="4">
+	        <div class="characteristic">
+		      	<span class="char-description">Apergaminhada, fissuras profundas, sem vasos</span>
+		      </div>
+	        <div class="count">4</div>
+	      </div>
+	    </div>
+	    <div class="span9">
+	      <div id="pele_5" score="5">
+	        <div class="characteristic">
+		      	<span class="char-description">Coriácea, fissuras profundas, enrugada</span>
+		      </div>
+	        <div class="count">5</div>
+	      </div>
+	    </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="span9 sinal">
+      <span class="sinalTitle">Lanugo</span>
+    </div>
+	  <div class="countRow">
+	  	<div class="span9 inactive">
+	      <div id="lanugo_-2" score="-2">
+		      <div class="characteristic">
+		      	<span class="char-description"></span>
+		      </div>
+		      <div class="count">-2</div>
+		    </div>
+	    </div>
+	    <div class="span9">
+	      <div id="lanugo_-1" score="-1">
+		      <div class="characteristic">
+		      	<span class="char-description">Nenhuns</span>
+		      </div>
+		      <div class="count">-1</div>
+		    </div>
+	    </div>
+	    <div class="span9">
+	      <div id="lanugo_0" score="0">
+	        <div class="characteristic">
+		      	<span class="char-description">Escasso</span>
+		      </div>
+	        <div class="count">0</div>
+	      </div>
+	    </div>
+	    <div class="span9">
+	      <div id="lanugo_1" score="1">
+	        <div class="characteristic">
+		      	<span class="char-description">Abundante</span>
+		      </div>
+	        <div class="count">1</div>
+	      </div>
+	    </div>
+	    <div class="span9">
+	      <div id="lanugo_2" score="2">
+	        <div class="characteristic">
+		      	<span class="char-description">Diluir</span>
+		      </div>
+	        <div class="count">2</div>
+	      </div>
+	    </div>
+	    <div class="span9">
+	      <div id="lanugo_3" score="3">
+	        <div class="characteristic">
+		      	<span class="char-description">Áreas sem pelo</span>
+		      </div>
+	        <div class="count">3</div>
+	      </div>
+	    </div>
+	    <div class="span9">
+	      <div id="lanugo_4" score="4">
+	        <div class="characteristic">
+		      	<span class="char-description">Praticamente ausente</span>
+		      </div>
+	        <div class="count">4</div>
+	      </div>
+	    </div>
+	    <div class="span9 inactive">
+	      <div id="lanugo_5" score="5">
+	        <div class="characteristic">
+		      	<span class="char-description"></span>
+		      </div>
+	        <div class="count">5</div>
+	      </div>
+	    </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="span9 sinal">
+      <span class="sinalTitle">Superfície Plantar</span>
+    </div>
+	  <div class="countRow">
+	  	<div class="span9">
+	      <div id="sup_plantar_-2" score="-2">
+		      <div class="characteristic">
+		      	<span class="char-description">Salto-dedo do pé &st;40mm</span>
+		      </div>
+		      <div class="count">-2</div>
+		    </div>
+	    </div>
+	    <div class="span9">
+	      <div id="sup_plantar_-1" score="-1">
+		      <div class="characteristic">
+		      	<span class="char-description">Salto-dedo do pé 40-50mm</span>
+		      </div>
+		      <div class="count">-1</div>
+		    </div>
+	    </div>
+	    <div class="span9">
+	      <div id="sup_plantar_0" score="0">
+	        <div class="characteristic">
+		      	<span class="char-description">Salto-dedo do pé &gt;50mm, nenhum vinco</span>
+		      </div>
+	        <div class="count">0</div>
+	      </div>
+	    </div>
+	    <div class="span9">
+	      <div id="sup_plantar_1" score="1">
+	        <div class="characteristic">
+		      	<span class="char-description">Marcas vermelhas fracas</span>
+		      </div>
+	        <div class="count">1</div>
+	      </div>
+	    </div>
+	    <div class="span9">
+	      <div id="sup_plantar_2" score="2">
+	        <div class="characteristic">
+		      	<span class="char-description">Vinco transversal anterior somente</span>
+		      </div>
+	        <div class="count">2</div>
+	      </div>
+	    </div>
+	    <div class="span9">
+	      <div id="sup_plantar_3" score="3">
+	        <div class="characteristic">
+		      	<span class="char-description">Vinca a formiga. 2/3</span>
+		      </div>
+	        <div class="count">3</div>
+	      </div>
+	    </div>
+	    <div class="span9">
+	      <div id="sup_plantar_4" score="4">
+	        <div class="characteristic">
+		      	<span class="char-description">Sola inteira do excesso dos vincos</span>
+		      </div>
+	        <div class="count">4</div>
+	      </div>
+	    </div>
+	    <div class="span9 inactive">
+	      <div id="sup_plantar_5" score="5">
+	        <div class="characteristic">
+		      	<span class="char-description"></span>
+		      </div>
+	        <div class="count">5</div>
+	      </div>
+	    </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="span9 sinal">
+      <span class="sinalTitle">Peito(Aréola)</span>
+    </div>
+	  <div class="countRow">
+	  	<div class="span9 inactive">
+	      <div id="peito_areola_-2" score="-2">
+		      <div class="characteristic">
+		      	<span class="char-description"></span>
+		      </div>
+		      <div class="count">-2</div>
+		    </div>
+	    </div>
+	    <div class="span9">
+	      <div id="peito_areola_-1" score="-1">
+		      <div class="characteristic">
+		      	<span class="char-description">Imperceptível</span>
+		      </div>
+		      <div class="count">-1</div>
+		    </div>
+	    </div>
+	    <div class="span9">
+	      <div id="peito_areola_0" score="0">
+	        <div class="characteristic">
+		      	<span class="char-description">Pouco perceptível</span>
+		      </div>
+	        <div class="count">0</div>
+	      </div>
+	    </div>
+	    <div class="span9">
+	      <div id="peito_areola_1" score="1">
+	        <div class="characteristic">
+		      	<span class="char-description">Aréola lisa sem glândula</span>
+		      </div>
+	        <div class="count">1</div>
+	      </div>
+	    </div>
+	    <div class="span9">
+	      <div id="peito_areola_2" score="2">
+	        <div class="characteristic">
+		      	<span class="char-description">Aréola  parcialmente elevada Glândula 1-2mm</span>
+		      </div>
+	        <div class="count">2</div>
+	      </div>
+	    </div>
+	    <div class="span9">
+	      <div id="peito_areola_3" score="3">
+	        <div class="characteristic">
+		      	<span class="char-description">Aréola elevada Glândula 3-4mm</span>
+		      </div>
+	        <div class="count">3</div>
+	      </div>
+	    </div>
+	    <div class="span9">
+	      <div id="peito_areola_4" score="4">
+	        <div class="characteristic">
+		      	<span class="char-description">Borda elevada Glândula 5-10mm</span>
+		      </div>
+	        <div class="count">4</div>
+	      </div>
+	    </div>
+	    <div class="span9 inactive">
+	      <div id="peito_areola_5" score="5">
+	        <div class="characteristic">
+		      	<span class="char-description"></span>
+		      </div>
+	        <div class="count">5</div>
+	      </div>
+	    </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="span9 sinal">
+      <span class="sinalTitle">Olho &amp; Orelha</span>
+    </div>
+	  <div class="countRow">
+	  	<div class="span9">
+	      <div id="peito_areola_-2" score="-2">
+		      <div class="characteristic">
+		      	<span class="char-description">Pálpebras fundidas firmemente</span>
+		      </div>
+		      <div class="count">-2</div>
+		    </div>
+	    </div>
+	    <div class="span9">
+	      <div id="olho_orelha_-1" score="-1">
+		      <div class="characteristic">
+		      	<span class="char-description">Pálpebras fundidas frouxamente</span>
+		      </div>
+		      <div class="count">-1</div>
+		    </div>
+	    </div>
+	    <div class="span9">
+	      <div id="olho_orelha_0" score="0">
+	        <div class="characteristic">
+		      	<span class="char-description">Pálpebras abertas pavilhão plano permanece dobrado</span>
+		      </div>
+	        <div class="count">0</div>
+	      </div>
+	    </div>
+	    <div class="span9">
+	      <div id="olho_orelha_1" score="1">
+	        <div class="characteristic">
+		      	<span class="char-description">Pavilhão parcialmente  encurvado, mole com recolhimento lento</span>
+		      </div>
+	        <div class="count">1</div>
+	      </div>
+	    </div>
+	    <div class="span9">
+	      <div id="olho_orelha_2" score="2">
+	        <div class="characteristic">
+		      	<span class="char-description">Pavilhão completamente encurvado, mole c/ recolhimento rápido</span>
+		      </div>
+	        <div class="count">2</div>
+	      </div>
+	    </div>
+	    <div class="span9">
+	      <div id="olho_orelha_3" score="3">
+	        <div class="characteristic">
+		      	<span class="char-description">Pavilhão completamente encurvado, firme c/ recolhimento instantâneo</span>
+		      </div>
+	        <div class="count">3</div>
+	      </div>
+	    </div>
+	    <div class="span9">
+	      <div id="olho_orelha_4" score="4">
+	        <div class="characteristic">
+		      	<span class="char-description">Cartilagem grossa orelha firme</span>
+		      </div>
+	        <div class="count">4</div>
+	      </div>
+	    </div>
+	    <div class="span9 inactive">
+	      <div id="olho_orelha_5" score="5">
+	        <div class="characteristic">
+		      	<span class="char-description"></span>
+		      </div>
+	        <div class="count">5</div>
+	      </div>
+	    </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="span9 sinal">
+      <span class="sinalTitle">Genital</span>
+    </div>
+	  <div class="countRow">
+	  	<div class="span9 genital inactive">
+	      <div id="genital_-2" score="-2">
+		      <div class="characteristic">
+		      	<span class="char-description"></span>
+		      </div>
+		      <div class="count">-2</div>
+		    </div>
+	    </div>
+	    <div class="span9 genital">
+	      <div id="genital_-1" score="-1">
+		      <div class="characteristic">
+		      	<span class="char-description">Escroto plano, liso</span>
+		      </div>
+		      <div class="count">-1</div>
+		      <div class="characteristic">
+		      	<span class="char-description">Clitóris proeminente lábios planose</span>
+		      </div>
+		    </div>
+	    </div>
+	    <div class="span9 genital">
+	      <div id="genital_0" score="0">
+	        <div class="characteristic">
+		      	<span class="char-description">Testículo fora da bolsa escrotal, sem rugaso</span>
+		      </div>
+	        <div class="count">0</div>
+	        <div class="characteristic">
+		      	<span class="char-description">Clitóris proeminente Lábios menores pequenos</span>
+		      </div>
+	      </div>
+	    </div>
+	    <div class="span9 genital">
+	      <div id="genital_1" score="1">
+	        <div class="characteristic">
+		      	<span class="char-description">Testículo no canal superior, rugas raras</span>
+		      </div>
+	        <div class="count">1</div>
+	        <div class="characteristic">
+		      	<span class="char-description">Clitóris proeminente, pequenos lábios evidentes</span>
+		      </div>
+	      </div>
+	    </div>
+	    <div class="span9 genital">
+	      <div id="genital_2" score="2">
+	        <div class="characteristic">
+		      	<span class="char-description">Testículo descendo, poucas rugas</span>
+		      </div>
+	        <div class="count">2</div>
+	        <div class="characteristic">
+		      	<span class="char-description">Lábios menores e maiores igualmente proeminentes</span>
+		      </div>
+	      </div>
+	    </div>
+	    <div class="span9 genital">
+	      <div id="genital_3" score="3">
+	        <div class="characteristic">
+		      	<span class="char-description">Testículos na bolsa, rugas bem visíveis</span>
+		      </div>
+	        <div class="count">3</div>
+	        <div class="characteristic">
+		      	<span class="char-description">Lábios maiores grandes e menores pequenos</span>
+		      </div>
+	      </div>
+	    </div>
+	    <div class="span9 genital">
+	      <div id="genital_4" score="4">
+	        <div class="characteristic">
+		      	<span class="char-description">Bolsa escrotal em pêndulo, rugas profundas</span>
+		      </div>
+	        <div class="count">4</div>
+	        <div class="characteristic">
+		      	<span class="char-description">Lábios maiores recobrem o clitóris e lábios menores</span>
+		      </div>
+	      </div>
+	    </div>
+	    <div class="span9 genital inactive">
+	      <div id="genital_5" score="5">
+	        <div class="characteristic">
+		      	<span class="char-description"></span>
+		      </div>
+	        <div class="count">5</div>
+	      </div>
+	    </div>
+    </div>
+  </div>
+ <div class="container">
+	<div class="row">
+		<div class="span1 footer">
+			<span class="gdgosp">Sponsored by <a href="https://plus.google.com/107992078616098741450/posts" target="_blank">GDG Open Sampa</a></span>
+			<br />
+			<span class="author">Developed by <a href="https://plus.google.com/106183363140838342264/posts" target="_blank">Sam Carecho</a> &amp; <a href="https://www.facebook.com/drKADU" target="_blank">Kadu Campos</a></span>
+		</div>
+	</div>
+</div>
+</div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.0/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/ballard.js"></script>
