--- a/index.html
+++ b/index.html
@@ -29,9 +29,8 @@
 	    <a class="brand" href="#">New Ballard</a>
 	    <div class="nav-collapse collapse">
 	      <ul class="nav">
-	        <li class="active"><a href="#">GDG Open Sampa</a></li>
-	        <li><a href="#about">About</a></li>
-	        <li><a href="#contact">Contact</a></li>
+	      	<li class="active"><a href="/" target="_blank">Nova Ficha</a><li>
+	        <li><a href="https://plus.google.com/107992078616098741450/posts" target="_blank">GDG Open Sampa</a></li>
 	      </ul>
 	    </div><!--/.nav-collapse -->
 	  </div>
