Bug Fix: Corrected olho_orelha_-2 button id.

--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@
     </div>
 	  <div class="countRow">
 	  	<div class="span9">
-	      <div id="peito_areola_-2" score="-2">
+	      <div id="olho_orelha_-2" score="-2">
 		      <div class="characteristic">
 		      	<span class="char-description">Pálpebras fundidas firmemente</span>
 		      </div>
