Bug Fix: HTML Character encoding fix.

--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
 	  	<div class="span9">
 	      <div id="sup_plantar_-2" score="-2">
 		      <div class="characteristic">
-		      	<span class="char-description">Salto-dedo do pé &st;40mm</span>
+		      	<span class="char-description">Salto-dedo do pé &lt;40mm</span>
 		      </div>
 		      <div class="count">-2</div>
 		    </div>
