--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@
 	    <div class="span9">
 	      <div id="peito_areola_2" score="2">
 	        <div class="characteristic">
-		      	<span class="char-description">Aréola parcialmente elevada, glândula 1-2mm</span>
+		      	<span class="char-description">Aréola parcialmente elevada, glândula <br>1-2mm</span>
 		      </div>
 	        <div class="count">2</div>
 	      </div>
@@ -613,7 +613,7 @@
 	    <div class="span9">
 	      <div id="peito_areola_3" score="3">
 	        <div class="characteristic">
-		      	<span class="char-description">Aréola elevada, glândula 3-4mm</span>
+		      	<span class="char-description">Aréola elevada, glândula <br>3-4mm</span>
 		      </div>
 	        <div class="count">3</div>
 	      </div>
@@ -621,7 +621,7 @@
 	    <div class="span9">
 	      <div id="peito_areola_4" score="4">
 	        <div class="characteristic">
-		      	<span class="char-description">Borda elevada, glândula 5-10mm</span>
+		      	<span class="char-description">Borda elevada, glândula <br>5-10mm</span>
 		      </div>
 	        <div class="count">4</div>
 	      </div>
